# libs7e

./: .gitignore  CMakeLists.txt  NOTES  NOTICE  child1.sh  test.c
cmake/: builtin_ctz.c
config.d/: CMakeLists.txt.inc  atomics_on_shm.c  builtin_clz.c  uint_bits.c
include/: s7e.h  s7e.h.in
include/s7e/: bitset.h  bitset.h.in  pipe.h  pm.h  proto.h  selfpipe.h
proto/: cmd.proto
src/: bitset.c  init.c  libs7e.ver  pipe.c  pm.c  pm_actions.c  pm_cmd.c  pm_main.c  pm_proctbl.c  pm_signal.c  proto.c  s7e_cmd.c  s7e_init.c  s7e_run.c  selfpipe.c  uint_bits.c
